# corvid

./: .gitignore  Cargo.toml  Dockerfile  README.md
scripts/: alt_port_smoke.sh
src/: config.rs  delivery.rs  dkim.rs  dns.rs  lib.rs  main.rs  model.rs  relay.rs  rfc822.rs  sanitize.rs  smtp.rs  spf.rs  store.rs  temp_mail.rs  util.rs  webmail.rs
static/: app.css  service.css
static/js/: compose.js  compose_ux.js  toast.js  webmail.js
templates/: shell.html
tests/: dkim_roundtrip.rs  mail_extras.rs  mail_rules.rs  pg_store.rs  smtp_state.rs  temp_mail_api.rs  webmail_progressive.rs  webmail_render.rs
